Fix footer link display on mobile screen

--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ footer a:hover {
 
   footer p:nth-child(2) {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
